	improvements contributed by Andrew Bishop.

	* htdig/ExternalParser.cc, htdig/Server.cc, htlib/cgi.cc,
	htmerge/db.cc, htmerge/words.cc: Call good_strtok with appropriate
	parameters (explicitly include NULL first parameter, second param
	is char, not char *).
	
	* htcommon/WordList.cc(Word): Added check for adding words with
	weight zero.

Wed Jan 20 00:30:12 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/SGMLEntities.cc: Declare extern config, since we now use
	config options.

	* htsearch/Display.cc: Fix typo causing compile problems.

Tue Jan 19 23:51:38 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Added options translate_amp, _lt_gt, _quot as
	suggested by Marjolein to control SGML translation of these
	entities.

	* htdig/SGMLEntities.cc: Use them as contributed by Marjolein.

Tue Jan 19 12:55:36 1999  Hans-Peter Nilsson  <hp@axis.se>

	* htlib/StringMatch.cc (Pattern): Always set PreviousState before
	checking PreviousValue.

	* htlib/StringMatch.cc (FindFirst): Be "greedy"; match longest.
	(Compare): Ditto.

	* htcommon/DocumentRef.cc (MEMCPY_ASSIGN, NUM_ASSIGN): New macros
	for assigning portably to some possibly-enum numeric type.
	(getnum): Use them.

	* htlib/StringMatch.cc (FINAL): Remove.
	(MATCH_INDEX_MASK): Include highest bit.
	(Pattern, FindFirst, Compare, FindFirstWord, CompareWord): Do not
	use FINAL.
	(FindFirst, Compare, FindFirstWord, CompareWord): When shifting by
	INDEX_SHIFT, cast to unsigned.

Mon Jan 18 17:43:29 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Added no_title_text option to allow
	configuration of the text when no title is available. Default is
	the filename.

	* htsearch/Display.cc: Use no_title_text to set the title
	appropriately, as contributed by Marjolein.

	* htsearch/Display.cc: Ensure PERCENT variable has a minimum of 1.

Mon Jan 18 17:41:44 1999  Gilles Detillieux <grdetil@scrc.umanitoba.ca>
